--- a/Views/MovieActors/Details.cshtml
+++ b/Views/MovieActors/Details.cshtml
@@ -13,14 +13,28 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Movie)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Movie.ID)
+        <dd class="col-sm-10">
+            @if (Model.Movie.Poster != null)
+            {
+                // Embed photo in page; good for security but bad for speed
+                var base64 = Convert.ToBase64String(Model.Movie.Poster);
+                var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+                <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+            }
+            @Html.DisplayFor(model => model.Movie.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Actor)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Actor.ID)
+        <dd class="col-sm-10">
+            @if (Model.Actor.Photo != null)
+            {
+                // Embed photo in page; good for security but bad for speed
+                var base64 = Convert.ToBase64String(Model.Actor.Photo);
+                var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+                <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+            }
+            @Html.DisplayFor(model => model.Actor.Name)
         </dd>
     </dl>
 </div>
