--- a/Views/Movies/Edit.cshtml
+++ b/Views/Movies/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
@@ -34,8 +34,20 @@
                 <span asp-validation-for="ImdbHyperlink" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Current Poster:</label><br/>
+                @if (Model.Poster != null && Model.Poster.Length > 0)
+                {
+                    var base64 = Convert.ToBase64String(Model.Poster);
+                    var imgSrc = $"data:image/jpeg;base64,{base64}";
+                    <img src="@imgSrc" alt="Current Poster" height="100" width="100" style="border-radius:50%" />
+                }
+                else
+                {
+                    <p>No current poster available.</p>
+                }
+
                 <label asp-for="Poster" class="control-label"></label>
-                <input asp-for="Poster" type="file" id="Photo" name="Photo" class="form-control" />
+                <input type="file" id="Poster" name="poster" class="form-control"/>
                 <span asp-validation-for="Poster" class="text-danger"></span>
             </div>
             <div class="form-group">
