--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fall2024_Assignment3_mtorres3.Models.Actor
+﻿@model Fall2024_Assignment3_mtorres3.Models.ActorDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,13 +11,13 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.Actor.Photo)
         </dt>
         <dd class="col-sm-10">
-            @if (Model.Photo != null)
+            @if (Model.Actor.Photo != null)
             {
                 // Embed photo in page; good for security but bad for speed
-                var base64 = Convert.ToBase64String(Model.Photo);
+                var base64 = Convert.ToBase64String(Model.Actor.Photo);
                 var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
                 <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
             }
@@ -27,26 +27,68 @@
             }
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Actor.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Actor.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.Actor.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.Actor.Age)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IMDBHyperlink)
+            @Html.DisplayNameFor(model => model.Actor.IMDBHyperlink)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IMDBHyperlink)
+            @Html.DisplayFor(model => model.Actor.IMDBHyperlink)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Actor.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+
+<h5>Movies</h5>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+
+            </th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Movies)
+        {
+            <tr>
+                <td>
+                    @if (item.Poster != null)
+                    {
+                        // Embed photo in page; good for security but bad for speed
+                        var base64 = Convert.ToBase64String(item.Poster);
+                        var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+                        <img src="@imgSrc" height="50" width="50" style="border-radius:50%" />
+                    }
+                    else
+                    {
+                        @Html.DisplayText("No poster found")
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    <a asp-controller="Movies" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-controller="Movies" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-controller="Movies" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
