--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Actors</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -37,6 +37,10 @@
                     var base64 = Convert.ToBase64String(item.Photo);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
                     <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
+                }
+                else
+                {
+                    @Html.DisplayText("No photo found")
                 }
             </td>
             <td>
