--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fall2024_Assignment3_mtorres3.Models.Movie
+﻿@model Fall2024_Assignment3_mtorres3.Models.MovieDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,13 +11,13 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Poster)
+            @Html.DisplayNameFor(model => model.Movie.Poster)
         </dt>
         <dd class="col-sm-10">
-            @if (Model.Poster != null)
+            @if (Model.Movie.Poster != null)
             {
                 // Embed photo in page; good for security but bad for speed
-                var base64 = Convert.ToBase64String(Model.Poster);
+                var base64 = Convert.ToBase64String(Model.Movie.Poster);
                 var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
                 <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
             }
@@ -27,32 +27,74 @@
             }
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.Movie.Title)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.Movie.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Genre)
+            @Html.DisplayNameFor(model => model.Movie.Genre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genre)
+            @Html.DisplayFor(model => model.Movie.Genre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReleaseYear)
+            @Html.DisplayNameFor(model => model.Movie.ReleaseYear)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReleaseYear)
+            @Html.DisplayFor(model => model.Movie.ReleaseYear)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImdbHyperlink)
+            @Html.DisplayNameFor(model => model.Movie.ImdbHyperlink)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImdbHyperlink)
+            @Html.DisplayFor(model => model.Movie.ImdbHyperlink)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Movie.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+
+<h5>Actors</h5>
+<table class="table">
+    <thead>
+    <tr>
+        <th>
+            
+        </th>
+        <th></th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model.Actors)
+    {
+        <tr>
+            <td>
+                @if (item.Photo != null)
+                {
+                    // Embed photo in page; good for security but bad for speed
+                    var base64 = Convert.ToBase64String(item.Photo);
+                    var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
+                    <img src="@imgSrc" height="50" width="50" style="border-radius:50%" />
+                }
+                else
+                {
+                    @Html.DisplayText("No photo found")
+                }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                <a asp-controller="Actors" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                <a asp-controller="Actors" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                <a asp-controller="Actors" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
