--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MovieActors" asp-action="Index">Movie-Actor Relationships</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieReviews" asp-action="Index">Movie Reviews</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ActorTweets" asp-action="Index">Actor Tweets</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
