Added storage for reviews and tweets and display it in details page also delete works now

--- a/Views/ActorTweets/Details.cshtml
+++ b/Views/ActorTweets/Details.cshtml
@@ -23,10 +23,28 @@
             @Html.DisplayFor(model => model.Text)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sentiment)
+            @Html.DisplayNameFor(model => model.Positive)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sentiment)
+            @Html.DisplayFor(model => model.Positive)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Negative)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Negative)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Neutral)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Neutral)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Compound)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Compound)
         </dd>
     </dl>
 </div>
