--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -52,7 +52,58 @@
 </div>
 
 
-<h5>Movies</h5>
+
+<h3>Actor Tweets</h3>
+<table class="table">
+    <thead>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Actor.Tweets)
+        </th>
+        <th>
+                @Html.DisplayNameFor(model => model.Actor.Tweets.FirstOrDefault().Positive)
+        </th>
+        <th>
+                @Html.DisplayNameFor(model => model.Actor.Tweets.FirstOrDefault().Negative)
+        </th>
+        <th>
+                @Html.DisplayNameFor(model => model.Actor.Tweets.FirstOrDefault().Neutral)
+        </th>
+        <th>
+                @Html.DisplayNameFor(model => model.Actor.Tweets.FirstOrDefault().Compound)
+        </th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model.Actor.Tweets) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Text)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Positive)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Negative)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Neutral)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Compound)
+            </td>
+            <td>
+                <a asp-controller="ActorTweets" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                <a asp-controller="ActorTweets" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                <a asp-controller="ActorTweets" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
+
+<h3>Movies</h3>
 <table class="table">
     <thead>
         <tr>
