--- a/Views/MovieReviews/Create.cshtml
+++ b/Views/MovieReviews/Create.cshtml
@@ -22,9 +22,24 @@
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sentiment" class="control-label"></label>
-                <input asp-for="Sentiment" class="form-control" />
-                <span asp-validation-for="Sentiment" class="text-danger"></span>
+                <label asp-for="Positive" class="control-label"></label>
+                <input asp-for="Positive" class="form-control" />
+                <span asp-validation-for="Positive" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Negative" class="control-label"></label>
+                <input asp-for="Negative" class="form-control" />
+                <span asp-validation-for="Negative" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Neutral" class="control-label"></label>
+                <input asp-for="Neutral" class="form-control" />
+                <span asp-validation-for="Neutral" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Compound" class="control-label"></label>
+                <input asp-for="Compound" class="form-control" />
+                <span asp-validation-for="Compound" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
