--- a/Views/Actors/Create.cshtml
+++ b/Views/Actors/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <input asp-for="Gender" class="form-control" />
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="IMDBHyperlink" class="control-label"></label>
                 <input asp-for="IMDBHyperlink" class="form-control" />
                 <span asp-validation-for="IMDBHyperlink" class="text-danger"></span>
