--- a/Views/Actors/Delete.cshtml
+++ b/Views/Actors/Delete.cshtml
@@ -40,6 +40,12 @@
             @Html.DisplayFor(model => model.Age)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Gender)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Gender)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IMDBHyperlink)
         </dt>
         <dd class = "col-sm-10">
