--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -39,6 +39,12 @@
             @Html.DisplayFor(model => model.Actor.Age)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Actor.Gender)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Actor.Gender)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Actor.IMDBHyperlink)
         </dt>
         <dd class = "col-sm-10">
