--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.Age)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Gender)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IMDBHyperlink)
             </th>
             <th></th>
@@ -48,6 +51,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.Gender)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IMDBHyperlink)
