--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Fall2024_Assignment3_mtorres3.styles.css" asp-append-version="true" />
     
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css" integrity="sha384-eCorNQ6xLKDT9aok8iCYVVP8S813O3kaugZFLBt1YhfR80d1ZgkNcf2ghiTRzRno" crossorigin="anonymous">
+    @* <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css" integrity="sha384-eCorNQ6xLKDT9aok8iCYVVP8S813O3kaugZFLBt1YhfR80d1ZgkNcf2ghiTRzRno" crossorigin="anonymous"> *@
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" integrity="sha384-bgBICwg8AJAWep3BiUqBE3+QV5909CHEZ7pnhri4AN/Ob3jIDkjRExh9fNMePFJ/" crossorigin="anonymous"> 
+
 </head>
 <body>
     <header>
@@ -63,7 +65,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js" integrity="sha384-cDXquhvkdBprgcpTQsrhfhxXRN4wfwmWauQ3wR5ZTyYtGrET2jd68wvJ1LlDqlQG" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.js" integrity="sha384-ijNZqA9quPpCWpLvT7OnZoJrPoLrKStnz8fafU6vWzGNpgpOyrGM+9JHyMcd56l1" crossorigin="anonymous"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
@@ -80,6 +82,23 @@
                         "scrollCollapse": true
                     });
                 }
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            // Select all table elements
+            const tables = document.querySelectorAll('table');
+
+            tables.forEach(function (table) {
+                // Create a new div element with the specified classes
+                const wrapper = document.createElement('div');
+                wrapper.className = 'card table-responsive';
+
+                // Insert the wrapper before the table
+                table.parentNode.insertBefore(wrapper, table);
+
+                // Move the table inside the wrapper
+                wrapper.appendChild(table);
             });
         });
     </script>
