--- a/Views/MovieActors/Delete.cshtml
+++ b/Views/MovieActors/Delete.cshtml
@@ -20,7 +20,7 @@
                 // Embed photo in page; good for security but bad for speed
                 var base64 = Convert.ToBase64String(Model.Movie.Poster);
                 var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+                <img class="rounded" src="@imgSrc" height="100" />
             }
             @Html.DisplayFor(model => model.Movie.Title)
         </dd>
@@ -33,7 +33,7 @@
                 // Embed photo in page; good for security but bad for speed
                 var base64 = Convert.ToBase64String(Model.Actor.Photo);
                 var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+                <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
             }
             @Html.DisplayFor(model => model.Actor.Name)
         </dd>
