--- a/Views/MovieActors/Index.cshtml
+++ b/Views/MovieActors/Index.cshtml
@@ -30,7 +30,7 @@
                     // Embed photo in page; good for security but bad for speed
                     var base64 = Convert.ToBase64String(item.Movie.Poster);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                    <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+                    <img class="rounded" src="@imgSrc" height="100" />
                 }
                 else
                 {
@@ -44,7 +44,7 @@
                     // Embed photo in page; good for security but bad for speed
                     var base64 = Convert.ToBase64String(item.Actor.Photo);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                    <img src="@imgSrc" height="70" width="70" style="border-radius:50%" />
+                    <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
                 }
                 @Html.DisplayFor(modelItem => item.Actor.Name)
             </td>
