--- a/Views/Movies/Edit.cshtml
+++ b/Views/Movies/Edit.cshtml
@@ -39,7 +39,7 @@
                 {
                     var base64 = Convert.ToBase64String(Model.Poster);
                     var imgSrc = $"data:image/jpeg;base64,{base64}";
-                    <img src="@imgSrc" alt="Current Poster" height="100" width="100" style="border-radius:50%" />
+                    <img class="rounded" src="@imgSrc" height="200"/>
                 }
                 else
                 {
