--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -39,7 +39,7 @@
                     // Embed photo in page; good for security but bad for speed
                     var base64 = Convert.ToBase64String(item.Poster);
                     var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                    <img src="@imgSrc" height="100" width="100" style="border-radius:50%" />
+                    <img class="rounded" src="@imgSrc" height="150" />
                 }
             </td>
             <td>
