--- a/Views/Actors/Details.cshtml
+++ b/Views/Actors/Details.cshtml
@@ -130,7 +130,7 @@
                         // Embed photo in page; good for security but bad for speed
                         var base64 = Convert.ToBase64String(item.Poster);
                         var imgSrc = string.Format("data:image/jpg;base64,{0}", base64);
-                        <img src="@imgSrc" height="50" width="50" style="border-radius:50%" />
+                        <img src="@imgSrc" height="100" class="rounded" />
                     }
                     else
                     {
